fix: broken search outline on Safari
* replace outline with box-shadow for rounded outline in Header Search Input
* add background-color transparent for search input in Hotel List page (replaces iOS Safari input gray bg color)

--- a/src/components/Header/Search/Search.module.scss
+++ b/src/components/Header/Search/Search.module.scss
@@ -6,7 +6,8 @@
   padding: 10px;
   border-radius: 14px;
   // outline: 5px solid var(--blueLight);
-  outline: 8px solid var(--yellow);
+  // outline: 8px solid var(--yellow);
+  box-shadow: 0 0 0 8px var(--yellow);
   background-color: var(--light);
   position: absolute;
   z-index: 1;
