--- a/src/components/HotelList/ListSearch/ListSearch.module.scss
+++ b/src/components/HotelList/ListSearch/ListSearch.module.scss
@@ -63,6 +63,7 @@
   border: none;
   border-radius: 5px;
   width: 100%;
+  background-color: transparent;
 
   &::placeholder {
     color: hsl(0, 0%, 76%);
